syntax = "proto3";

package greet;


service GreetSvc {
    rpc greet (GreetRequest) returns (GreetResponse) {}
}

message Greeting {
    string firstName = 1;
    string lastName = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}